// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip Analytics event tracking sends dialog tooltip analytics event on open 1`] = `
Array [
  Object {
    "event_extension": "Design system integration",
    "event_name": "tooltip_viewed",
    "text": "tooltip trigger",
  },
]
`;

exports[`Tooltip Analytics event tracking sends icon trigger tooltip analytics event on hover 1`] = `
Array [
  Object {
    "event_extension": "Design system integration",
    "event_name": "tooltip_viewed",
    "text": "tooltip trigger",
  },
]
`;

exports[`Tooltip Analytics event tracking sends inline tooltip analytics event 1`] = `
Array [
  Object {
    "event_extension": "Design system integration",
    "event_name": "tooltip_viewed",
    "text": "inline trigger",
  },
]
`;

exports[`Tooltip renders a tooltip on hover 1`] = `
<button
  aria-label="tooltip trigger"
  class="ds-c-tooltip__trigger ds-c-tooltip__trigger-icon"
  type="button"
>
  <span
    class="ds-c-tooltip-icon__container"
  >
    <svg
      aria-hidden="true"
      class="ds-c-icon ds-c-icon--info-circle-thin ds-c-tooltip-icon"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 16c-4.4 0-8-3.6-8-8s3.6-8 8-8 8 3.6 8 8-3.6 8-8 8zm1-3.7V6.4H7v5.9h2zM7 4.9c0 .6.3.9 1 .9s1-.3 1-.9c0-.3-.1-.5-.2-.7-.2-.1-.5-.2-.8-.2-.3 0-.6.1-.8.2-.1.2-.2.4-.2.7z"
        fill-rule="nonzero"
      />
    </svg>
  </span>
</button>
`;

exports[`Tooltip renders custom trigger component 1`] = `
<a
  aria-label="tooltip trigger"
  class="ds-c-tooltip__trigger ds-c-tooltip__trigger-icon"
  tabindex="0"
>
  <span
    class="ds-c-tooltip-icon__container"
  >
    <svg
      aria-hidden="true"
      class="ds-c-icon ds-c-icon--info-circle-thin ds-c-tooltip-icon"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 16c-4.4 0-8-3.6-8-8s3.6-8 8-8 8 3.6 8 8-3.6 8-8 8zm1-3.7V6.4H7v5.9h2zM7 4.9c0 .6.3.9 1 .9s1-.3 1-.9c0-.3-.1-.5-.2-.7-.2-.1-.5-.2-.8-.2-.3 0-.6.1-.8.2-.1.2-.2.4-.2.7z"
        fill-rule="nonzero"
      />
    </svg>
  </span>
</a>
`;

exports[`Tooltip renders inverse tooltip 1`] = `
<DocumentFragment>
  <div
    class="ds-c-tooltip__container"
  >
    <button
      aria-label="tooltip trigger"
      class="ds-c-tooltip__trigger ds-c-tooltip__trigger-icon ds-c-tooltip__trigger--inverse"
      type="button"
    >
      <span
        class="ds-c-tooltip-icon__container"
      >
        <svg
          aria-hidden="true"
          class="ds-c-icon ds-c-icon--info-circle-thin ds-c-tooltip-icon"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 16c-4.4 0-8-3.6-8-8s3.6-8 8-8 8 3.6 8 8-3.6 8-8 8zm1-3.7V6.4H7v5.9h2zM7 4.9c0 .6.3.9 1 .9s1-.3 1-.9c0-.3-.1-.5-.2-.7-.2-.1-.5-.2-.8-.2-.3 0-.6.1-.8.2-.1.2-.2.4-.2.7z"
            fill-rule="nonzero"
          />
        </svg>
      </span>
    </button>
  </div>
</DocumentFragment>
`;
